<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activitys.ReportInformationActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/textViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationDetails1"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/textViewReportInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationReportID"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/textView1ReportInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationRegard"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/textView2ReportInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationFunctionable"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/textView3ReportInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationContext"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/textViewDatails2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationDetails2"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/textView4ReportInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationStationID"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/textView5ReportInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationOperator"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/textView6ReportInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationStreet"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/textView7ReportInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationHouseNumber"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/textView8ReportInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationPostCode"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/textView9ReportInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reportInformationLocation"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/textView10ReportInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:text="@string/reportInformationCoordination"
            android:textColor="@color/white"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>